@startuml "SourceGuild Logical ERD"
skinparam defaultFontName "Segoe UI"
skinparam defaultFontSize 12
skinparam packageStyle rectangle
skinparam linetype ortho

entity "AppUsers" as users {
    * Id : uniqueidentifier <<PK>>
    --
    * UserName : nvarchar(256)
    * Email : nvarchar(256)
    * EmailConfirmed : bit
    FullName : nvarchar(max)
    ProfilePictureUrl : nvarchar(max)
    * PasswordHash : nvarchar(max)
    * SecurityStamp : nvarchar(max)
    * ConcurrencyStamp : nvarchar(max)
    * AccessFailedCount : int
    * LockoutEnabled : bit
    LockoutEnd : datetimeoffset
    * TwoFactorEnabled : bit
}

entity "Categories" as categories {
    * Id : uniqueidentifier <<PK>>
    --
    * Name : nvarchar(100) <<unique>>
    Description : nvarchar(500)
    * CreatedAt : datetime2
    * UpdatedAt : datetime2
}

entity "Courses" as courses {
    * Id : uniqueidentifier <<PK>>
    --
    * Title : nvarchar(max)
    Description : nvarchar(max)
    * Price : decimal(18,2)
    * Status : int
    DurationInWeeks : int
    ImageUrl : nvarchar(max)
    StartDate : datetime2
    * InstructorId : uniqueidentifier <<FK>>
    * CreatedAt : datetime2
    * UpdatedAt : datetime2
}

entity "CategoryCourse" as category_course {
    * CategoriesId : uniqueidentifier <<PK, FK>>
    * CoursesId : uniqueidentifier <<PK, FK>>
}

entity "Sections" as sections {
    * Id : uniqueidentifier <<PK>>
    --
    * CourseId : uniqueidentifier <<FK>>
    * Title : nvarchar(150)
    * [Order] : int
    * Status : int
    * CreatedAt : datetime2
    * UpdatedAt : datetime2
}

entity "Lessons" as lessons {
    * Id : uniqueidentifier <<PK>>
    --
    * SectionId : uniqueidentifier <<FK>>
    * Title : nvarchar(150)
    * [Order] : int
    * Status : int
    * CreatedAt : datetime2
    * UpdatedAt : datetime2
}

entity "ContentBlocks" as content_blocks {
    * Id : uniqueidentifier <<PK>>
    --
    * LessonId : uniqueidentifier <<FK>>
    * [Order] : int
    * ContentType : nvarchar(13) <<Discriminator TPH>>
    Text : nvarchar(max)
    VideoUrl : nvarchar(max)
    ThumbnailUrl : nvarchar(max)
    Transcription : nvarchar(max)
    DurationMinutes : int
    * CreatedAt : datetime2
    * UpdatedAt : datetime2
}

entity "Enrollments" as enrollments {
    * Id : uniqueidentifier <<PK>>
    --
    * UserId : uniqueidentifier <<FK>>
    * CourseId : uniqueidentifier <<FK>>
    * EnrolledAt : datetime2
    * ProgressPercentage : int
}

entity "Reviews" as reviews {
    * Id : uniqueidentifier <<PK>>
    --
    * UserId : uniqueidentifier <<FK>>
    * CourseId : uniqueidentifier <<FK>>
    * Rating : tinyint
    Comment : nvarchar(max)
    * CreatedAt : datetime2
    * UpdatedAt : datetime2
}

users ||--o{ courses : "InstructorId (NO ACTION)"
courses ||--|{ category_course : "CoursesId"
categories ||--|{ category_course : "CategoriesId"
courses ||--o{ sections : "CourseId (CASCADE)"
sections ||--o{ lessons : "SectionId (CASCADE)"
lessons ||--o{ content_blocks : "LessonId (CASCADE)"

users ||--o{ enrollments : "UserId (NO ACTION)"
courses ||--o{ enrollments : "CourseId (CASCADE)"

users ||--o{ reviews : "UserId (CASCADE)"
courses ||--o{ reviews : "CourseId (CASCADE)"

@enduml